---
source: crates/oxvg_optimiser/src/jobs/add_classes_to_svg.rs
expression: "test_config(r#\"{ \"addClassesToSvg\": {\n            \"className\": \"mySvg size-big\"\n        } }\"#,\n        Some(r#\"<svg xmlns=\"http://www.w3.org/2000/svg\" class=\"mySvg\">\"#))?"
---
<svg xmlns="http://www.w3.org/2000/svg" class="mySvg mySvg size-big"></svg>
